--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,12 +5,22 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
-
   <body>
-    <%= yield %>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light mb-4">
+      <div class="container">
+        <%= link_to "Yelp MVP", restaurants_path, class: "navbar-brand" %>
+        <div class="navbar-nav">
+          <%= link_to "All Restaurants", restaurants_path, class: "nav-link" %>
+          <%= link_to "Add Restaurant", new_restaurant_path, class: "nav-link" %>
+        </div>
+      </div>
+    </nav>
+    <div class="ps-4 pe-4">
+      <%= yield %>
+    </div>
   </body>
 </html>
